--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<!-- <app-header></app-header> -->
-1
-s
-<!-- <router-outlet></router-outlet> -->
+<app-header></app-header>
+
+<router-outlet></router-outlet>
 
 
