--- a/src/app/analytics/analytics.component.css
+++ b/src/app/analytics/analytics.component.css
@@ -100,13 +100,13 @@ column-chart{
 }
 .name-list ul{
     padding-left: 0;
-    height: 100%;
+    height: 82%;
     overflow: auto;    
 }
 .name-list ul li {
     padding: 10px;
     font-size: 18px;
-    border: 1px solid #ffff;
+    border: 1px solid #fff;
 }
 
 .name-list ul li:nth-child(even) {
