--- a/src/app/layout/header.component.css
+++ b/src/app/layout/header.component.css
@@ -11,7 +11,8 @@ header .brand {
 }
 
 .header-container{
-    max-width: 1200px;
+    padding-left: 30px; 
+    padding-right: 30px;
     margin: auto
 }
 
